# tam

./: .gitignore  README.md  midterm_report.md  pyproject.toml  temporal_scope_implicit_expanded.json
experiments/: config.py  generate_prompts.py  plot_results.py  run_belief_action.py  run_belief_action_v2.py  run_belief_action_validate.py  run_cross_family.py  run_curvature.py  run_curvature_signal.py  run_deception.py  run_deception_benchmark.py  run_domain_transfer.py  run_head_knockout.py  run_nonlinear_probe.py  run_patching.py  run_per_token.py  run_probe_study.py  run_probes.py  run_reasoning_probe.py  run_safety_benchmark.py  run_safety_steering.py  run_self_estimate_probe.py  run_steering.py  test_within_category.py
results/: all_results.json  cross_family_all.json  rtp_sampled_prompts.json
results/qwen3.5-27b/: probe_results.json
results/qwen3.5-4b/: cross_family_results.json  curvature_results.json  deception_results.json  head_knockout_results.json  nonlinear_probe_results.json  patching_results.json  per_token_results.json  probe_results.json  steering_results.json
results/qwen3.5-9b/: belief_action_results.json  belief_action_v2_results.json  belief_action_validate_results.json  cross_family_results.json  curvature_results.json  deception_benchmark_results.json  deception_results.json  domain_transfer_results.json  head_knockout_results.json  nonlinear_probe_results.json  patching_results.json  per_token_results.json  probe_results.json  probe_study_results.json  reasoning_probe_results.json  safety_benchmark_results.json  steering_results.json  (+2 more)
