[project]
name = "temporal-awareness"
version = "0.1.0"
description = "Temporal Activation Monitors for AI Oversight — SPAR RQ1"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4",
    "transformers>=4.49",
    "accelerate>=1.3",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "numpy>=1.26",
    "tqdm>=4.66",
    "scipy>=1.13",
]
